# simple-sql-profiler

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-desktop.yml  release-desktop.yml
docs/: index.html  robots.txt  sitemap.xml  style.css
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  profiler.rs  settings.rs
src/components/: AboutDialog.tsx  ConnectionForm.tsx  ContextMenu.tsx  Dropdown.tsx  QueryDetail.tsx  QueryFeed.tsx  TitleBar.tsx  Toolbar.tsx
src/lib/: types.ts
