[package]
name = "simple-sql-profiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_sql_profiler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
keyring = { version = "3", features = ["windows-native"] }
